[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/SuccessChecklist.gd" type="Script" id=1]
[ext_resource path="res://Assets/music/start_truck.mp3" type="AudioStream" id=2]
[ext_resource path="res://Assets/fonts/CompassPro.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=3]
size = 25
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 5 )

[node name="Success" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 640.0
margin_bottom = 368.0
color = Color( 0, 0, 0, 0.705882 )

[node name="Label" type="Label" parent="."]
margin_left = 101.0
margin_top = 168.0
margin_right = 541.0
margin_bottom = 219.0
custom_colors/font_color = Color( 0.364706, 0.956863, 0.211765, 1 )
custom_fonts/font = SubResource( 3 )
text = "ÓTIMA JOGADA!
Você está pronto para a sua próxima viagem."
align = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 1.2
autostart = true

[node name="LoadingLabel" type="Label" parent="."]
margin_left = 483.0
margin_top = 350.0
margin_right = 634.0
margin_bottom = 364.0
custom_fonts/font = SubResource( 4 )
text = "Carregando..."

[node name="StartTruck" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -10.0

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
